receitaHTML/target/generated-sources/antlr4/br/ufscar/dc/compiladores/receitahtml/receitaHTML_Exp_reg_Parser.java
// Generated from br\u005Cufscar\dc\compiladores\receitahtml\receitaHTML_Exp_reg_.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores.receitahtml;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class receitaHTML_Exp_reg_Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, PALAVRAS_RESERVADAS=21, NUM_INT=22, INSTRUCAO_PARAEXECUCAO=23, 
		IDENTIFICADOR=24, STRING=25, CARACTERESIGNORADOS=26, COMENTARIO=27, COMENTARIOSEMBARRA=28, 
		CADEIANFECHADA=29, ErrorCharacter=30;
	public static final int
		RULE_receita = 0, RULE_titulo = 1, RULE_descricao = 2, RULE_rendimento = 3, 
		RULE_tempo_de_preparo = 4, RULE_utensilios = 5, RULE_utensilio = 6, RULE_faz_o_que = 7, 
		RULE_ingredientes = 8, RULE_ingrediente = 9, RULE_modo_de_preparo = 10, 
		RULE_instrucoes_preparacao = 11, RULE_chamada_utensilio = 12, RULE_parametro = 13, 
		RULE_condicional_ate = 14, RULE_instrucao_para_utensilio = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"receita", "titulo", "descricao", "rendimento", "tempo_de_preparo", "utensilios", 
			"utensilio", "faz_o_que", "ingredientes", "ingrediente", "modo_de_preparo", 
			"instrucoes_preparacao", "chamada_utensilio", "parametro", "condicional_ate", 
			"instrucao_para_utensilio"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'NOME'", "':'", "'DESCRICAO'", "'RENDIMENTO'", "'TEMPO'", "'DE'", 
			"'PREPARO'", "'UTENSILIOS'", "'-'", "'='", "'{'", "'}'", "'*'", "'INGREDIENTES'", 
			"'MODO'", "'.'", "'('", "'+'", "')'", "'ATE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "PALAVRAS_RESERVADAS", 
			"NUM_INT", "INSTRUCAO_PARAEXECUCAO", "IDENTIFICADOR", "STRING", "CARACTERESIGNORADOS", 
			"COMENTARIO", "COMENTARIOSEMBARRA", "CADEIANFECHADA", "ErrorCharacter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "receitaHTML_Exp_reg_.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public receitaHTML_Exp_reg_Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ReceitaContext extends ParserRuleContext {
		public TituloContext titulo() {
			return getRuleContext(TituloContext.class,0);
		}
		public DescricaoContext descricao() {
			return getRuleContext(DescricaoContext.class,0);
		}
		public RendimentoContext rendimento() {
			return getRuleContext(RendimentoContext.class,0);
		}
		public Tempo_de_preparoContext tempo_de_preparo() {
			return getRuleContext(Tempo_de_preparoContext.class,0);
		}
		public UtensiliosContext utensilios() {
			return getRuleContext(UtensiliosContext.class,0);
		}
		public IngredientesContext ingredientes() {
			return getRuleContext(IngredientesContext.class,0);
		}
		public Modo_de_preparoContext modo_de_preparo() {
			return getRuleContext(Modo_de_preparoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(receitaHTML_Exp_reg_Parser.EOF, 0); }
		public ReceitaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_receita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterReceita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitReceita(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitReceita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReceitaContext receita() throws RecognitionException {
		ReceitaContext _localctx = new ReceitaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_receita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			titulo();
			setState(33);
			descricao();
			setState(34);
			rendimento();
			setState(35);
			tempo_de_preparo();
			setState(36);
			utensilios();
			setState(37);
			ingredientes();
			setState(38);
			modo_de_preparo();
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TituloContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public TituloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterTitulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitTitulo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitTitulo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TituloContext titulo() throws RecognitionException {
		TituloContext _localctx = new TituloContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_titulo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			setState(42);
			match(T__1);
			setState(43);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescricaoContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public DescricaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descricao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterDescricao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitDescricao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitDescricao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescricaoContext descricao() throws RecognitionException {
		DescricaoContext _localctx = new DescricaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_descricao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__2);
			setState(46);
			match(T__1);
			setState(47);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RendimentoContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public RendimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rendimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterRendimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitRendimento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitRendimento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RendimentoContext rendimento() throws RecognitionException {
		RendimentoContext _localctx = new RendimentoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rendimento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__3);
			setState(50);
			match(T__1);
			setState(51);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tempo_de_preparoContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public Tempo_de_preparoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempo_de_preparo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterTempo_de_preparo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitTempo_de_preparo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitTempo_de_preparo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tempo_de_preparoContext tempo_de_preparo() throws RecognitionException {
		Tempo_de_preparoContext _localctx = new Tempo_de_preparoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tempo_de_preparo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__4);
			setState(54);
			match(T__5);
			setState(55);
			match(T__6);
			setState(56);
			match(T__1);
			setState(57);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UtensiliosContext extends ParserRuleContext {
		public List<UtensilioContext> utensilio() {
			return getRuleContexts(UtensilioContext.class);
		}
		public UtensilioContext utensilio(int i) {
			return getRuleContext(UtensilioContext.class,i);
		}
		public UtensiliosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_utensilios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterUtensilios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitUtensilios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitUtensilios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UtensiliosContext utensilios() throws RecognitionException {
		UtensiliosContext _localctx = new UtensiliosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_utensilios);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__7);
			setState(60);
			match(T__1);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(61);
				utensilio();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UtensilioContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(receitaHTML_Exp_reg_Parser.IDENTIFICADOR, 0); }
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public List<Faz_o_queContext> faz_o_que() {
			return getRuleContexts(Faz_o_queContext.class);
		}
		public Faz_o_queContext faz_o_que(int i) {
			return getRuleContext(Faz_o_queContext.class,i);
		}
		public UtensilioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_utensilio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterUtensilio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitUtensilio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitUtensilio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UtensilioContext utensilio() throws RecognitionException {
		UtensilioContext _localctx = new UtensilioContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_utensilio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__8);
			setState(68);
			match(IDENTIFICADOR);
			setState(69);
			match(T__9);
			setState(70);
			match(STRING);
			setState(71);
			match(T__10);
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				faz_o_que();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 );
			setState(77);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Faz_o_queContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(receitaHTML_Exp_reg_Parser.IDENTIFICADOR, 0); }
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public Faz_o_queContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faz_o_que; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterFaz_o_que(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitFaz_o_que(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitFaz_o_que(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Faz_o_queContext faz_o_que() throws RecognitionException {
		Faz_o_queContext _localctx = new Faz_o_queContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_faz_o_que);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__12);
			setState(80);
			match(IDENTIFICADOR);
			setState(81);
			match(T__9);
			setState(82);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredientesContext extends ParserRuleContext {
		public List<IngredienteContext> ingrediente() {
			return getRuleContexts(IngredienteContext.class);
		}
		public IngredienteContext ingrediente(int i) {
			return getRuleContext(IngredienteContext.class,i);
		}
		public IngredientesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingredientes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterIngredientes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitIngredientes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitIngredientes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IngredientesContext ingredientes() throws RecognitionException {
		IngredientesContext _localctx = new IngredientesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ingredientes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__13);
			setState(85);
			match(T__1);
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				ingrediente();
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__8 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IngredienteContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(receitaHTML_Exp_reg_Parser.IDENTIFICADOR, 0); }
		public TerminalNode STRING() { return getToken(receitaHTML_Exp_reg_Parser.STRING, 0); }
		public IngredienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ingrediente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterIngrediente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitIngrediente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitIngrediente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IngredienteContext ingrediente() throws RecognitionException {
		IngredienteContext _localctx = new IngredienteContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ingrediente);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__8);
			setState(92);
			match(IDENTIFICADOR);
			setState(93);
			match(T__9);
			setState(94);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Modo_de_preparoContext extends ParserRuleContext {
		public List<Instrucoes_preparacaoContext> instrucoes_preparacao() {
			return getRuleContexts(Instrucoes_preparacaoContext.class);
		}
		public Instrucoes_preparacaoContext instrucoes_preparacao(int i) {
			return getRuleContext(Instrucoes_preparacaoContext.class,i);
		}
		public Modo_de_preparoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modo_de_preparo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).enterModo_de_preparo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof receitaHTML_Exp_reg_Listener ) ((receitaHTML_Exp_reg_Listener)listener).exitModo_de_preparo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof receitaHTML_Exp_reg_Visitor ) return ((receitaHTML_Exp_reg_Visitor<? extends T>)visitor).visitModo_de_preparo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Modo_de_preparoContext modo_de_preparo() throws RecognitionException {
		Modo_de_preparoContext _localctx = new Modo_de_preparoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_modo_de_preparo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__14);
			setState(97);
			match(T__5);
			setState(98);
			match(T__6);
			setState(99);
			match(T__1);
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				instrucoes_preparacao();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFICADOR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
